			SWI-Prolog ChangeLog
			====================

  * FIXED: Errornous messages on recursively receiving (error) signals.

  * FIXED: Various issues in the GUI tracer.

  * FIXED: when loading foreign libraries in `system mode', the loaded 
    predicates are available to the tracer as other built-in code.  This
    fixes tracing XPCE code.

  * ADDED: option qcompile to load_files/2.

  * ENHANCED: Replaced some more warnings with exceptions in pl-trace.c

  * PORT: Port to MacOS X (darwin), with help from Paulo Moura.
	- Various BSD enhancement to configure
	- Make plld aware of the -bundle -bundle_loader stuff
	- Deal with foreign symbols starting with a _
	- Resolve some macro conflicts
	- Various missing :: in Makefiles (needed on case-insensitive
	  filesystems like Mac HFS+)

  * MODIFIED: compiling/0 now also succeed during execution of all directives
    when compiling a state or qlf file.

  * FIXED: Make compilation in `runtime' mode work again
    (Lourens van der Meij).

  * FIXED: GUI tracer to handle the dynamic code used for handling compound
    meta-calls.  Found by Holger Kanwischer.  Thanks.

  * FIXED: make pl-wam.c compile in `runtime mode'.  Lourens van der Meij,

VERSION 5.0.1
=============

  * PORT: Make sure all packages are compiled with plld and passed -fpic
    to fix building shared objects on some platforms.  Reported by
    Michael Piefel.
    
  * PORT: Updated config.sub and config.guess using SuSE 7.3 versions.

  * FIXED: configure message if libreadline is not found.

  * FIXED: Installing the manuals by Pixel <pixel@mandrakesoft.com>

  * UPDATED: web-locations in help and Windows console.

  * MODIFIED: is_list/1 now checks for a poper list.  proper_list/1 has
    been moved to library(backcomp).  Thanks to Richard O'Keefe for pointing
    out this non-standard behaviour.

  * FIXED: name-clash in plld.c on AIX (Victor Bancroft).

VERSION 5.0.0
=============
